set ( basescape_src
  BaseView.cpp
  BaseView.h
  CraftSoldiersState.cpp
  CraftSoldiersState.h
  TransfersState.cpp
  TransfersState.h
  StoresState.cpp
  StoresState.h
  SackSoldierState.h
  SackSoldierState.cpp
  SellState.h
  SellState.cpp
  CraftInfoState.cpp
  CraftInfoState.h
  PlaceLiftState.h
  PlaceLiftState.cpp
  DismantleFacilityState.h
  DismantleFacilityState.cpp
  SoldierInfoState.h
  SoldierInfoState.cpp
  CraftsState.cpp
  CraftsState.h
  PlaceFacilityState.h
  PlaceFacilityState.cpp
  TransferItemsState.cpp
  TransferItemsState.h
  CraftArmorState.h
  CraftArmorState.cpp
  MonthlyCostsState.cpp
  MonthlyCostsState.h
  CraftEquipmentState.cpp
  CraftEquipmentState.h
  BaseInfoState.h
  BaseInfoState.cpp
  ResearchState.h
  ResearchState.cpp
  PurchaseState.cpp
  PurchaseState.h
  TransferBaseState.cpp
  TransferBaseState.h
  CraftWeaponsState.h
  CraftWeaponsState.cpp
  ManufactureState.h
  ManufactureState.cpp
  BuildFacilitiesState.h
  BuildFacilitiesState.cpp
  MiniBaseView.cpp
  MiniBaseView.h
  BasescapeState.cpp
  BasescapeState.h
  TransferConfirmState.cpp
  TransferConfirmState.h
  SoldierArmorState.h
  SoldierArmorState.cpp
  SoldiersState.cpp
  SoldiersState.h
  NewResearchListState.h
  NewResearchListState.cpp
  ResearchInfoState.h
  ResearchInfoState.cpp
  NewManufactureListState.h
  NewManufactureListState.cpp
  ManufactureStartState.h
  ManufactureStartState.cpp
  ManufactureInfoState.h
  ManufactureInfoState.cpp
  PlaceStartFacilityState.h
  PlaceStartFacilityState.cpp
  SelectStartFacilityState.h
  SelectStartFacilityState.cpp
  SoldierMemorialState.cpp
  SoldierMemorialState.h
  ManageAlienContainmentState.h
  ManageAlienContainmentState.cpp
)
add_library(Basescape STATIC ${basescape_src})

if ( MSVC )
  source_group ( "Basescape" FILES ${basescape_src} )
endif (MSVC)
